fix(#logoNversion2): Reduced font size.
- Reduced the font size in the in-client version indicator so it should
not overlap the logo now.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -586,7 +586,7 @@ header {
     bottom: 0;
     right: 0;
     color: #ffffff;
-    font-size: .8rem;
+    font-size: .7rem;
     font-style: italic;
 }
 
